# rust-bootcamp-06-crm

./: .tokeignore  Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm/src/: main.rs  server.rs
crm/src/abi/: crm.rs
crm_metadata/: Cargo.toml
crm_send/: Cargo.toml
protos/user_stats/: rpc.proto
user_stat/: .env  Cargo.toml  build.rs  user_stat.yml
user_stat/examples/: gen.rs
user_stat/migrations/: 20240630023408_init.sql  20240630072754_index.sql
