[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]
description = "A template for Rust projects."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
